Fix for providing a highly visible highlighting mechanism for links or controls when they receive keyboard focus. (WCAG 2.0, Additional Techniques (Advisory) for Sucess Criterion 2.4.3, https://www.w3.org/TR/UNDERSTANDING-WCAG20/navigation-mechanisms-focus-order.html)
Changes:

- Added an outline to links, buttons, select menus and other bootstrap form controls.
- The outline colour was set to #107896 (Darkest Alice Blue) which is the default colour for links.
- The default outline with set to 2px, except for buttons where it is set to 3px
to improve visiblity.

Fix for #2170.

--- a/app/assets/stylesheets/blocks/_accessibility.scss
+++ b/app/assets/stylesheets/blocks/_accessibility.scss
@@ -28,3 +28,27 @@ div.skip a:focus {
   height:auto;
   overflow:visible !important;
 }
+
+/** Focus outline required for accessibility */
+a, input, select, .form-control {
+  &:focus,
+  &:hover,
+  &:active {
+    outline-style: solid !important;
+    outline-color: $color-focus-outline !important;
+    outline-width: 2px !important;
+  }
+}
+  
+  /** button outline-width increased for better visibility of outline */
+  button {
+
+    &:focus,
+    &:hover,
+    &:active {
+      outline-style: solid !important;
+      outline-color: $color-focus-outline !important;
+      outline-width: 3px !important;
+    }
+  }
+  
